--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,11 @@
       <version>4.7</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.1.37</version>
+      </dependency>
   </dependencies>
   <build>
     <resources>
@@ -258,8 +263,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>7</source>
+          <target>7</target>
           <compilerArgument>-Xlint:all</compilerArgument>
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
