--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,12 @@
       <artifactId>druid</artifactId>
       <version>1.0.9</version>
     </dependency>
+<!--分页-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.2</version>
+    </dependency>
 
     <!-- @Inject -->
     <dependency>
